--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
       <div class="title">
         <p>THE COUNTER: 70 Countries 1036 Cities</p>
         <h1>Leave your mark on all over the world</h1>
-        <button>
-          <a href="">Read More</a>
-        </button>
+        <button>Read More</button>
         <p id="scroll">Scroll Down to Continue</p>
         <img src="./dev/images/arrow.svg" alt="" />
       </div>
       <div class="location">
-        <img src="./dev/images/basic-location.png" alt="" />
+        <img src="./images/basic-location.png" alt="" />
       </div>
     </section>
-    <!--  -->
+    <!-- hero section -->
+    <main>
+      <div class="hero">Hero section</div>
+      <div class="sidebar">Side barr</div>
+    </main>
   </body>
 </html>
